# Heaven

./: .gitignore  CHANGES  README.md  meson.build
.github/workflows/: doxygen.yml
docs/: _bar_2_h_n_action_8h_source.html  _bar_2_h_n_client_8h_source.html  _bar_2_h_n_compositor_8h_source.html  _bar_2_h_n_divider_8h_source.html  _bar_2_h_n_log_8h_source.html  _bar_2_h_n_menu_8h_source.html  _bar_2_h_n_object_8h_source.html  _bar_2_h_n_toggle_8h_source.html  _bar_2_h_n_topbar_8h_source.html  _bar_2_h_n_with_children_8h_source.html  _bar_2_h_n_with_enabled_8h_source.html  _bar_2_h_n_with_icon_8h_source.html  _bar_2_h_n_with_parent_8h_source.html  _bar_2_h_n_with_shortcut_8h_source.html  _bar_2_h_n_with_title_8h_source.html  _client_2_h_n_action_8h_source.html  _client_2_h_n_client_8h_source.html  _client_2_h_n_divider_8h_source.html  _client_2_h_n_log_8h_source.html  _client_2_h_n_menu_8h_source.html  _client_2_h_n_object_8h_source.html  _client_2_h_n_toggle_8h_source.html  _client_2_h_n_topbar_8h_source.html  _client_2_h_n_with_children_8h_source.html  _client_2_h_n_with_enabled_8h_source.html  _client_2_h_n_with_icon_8h_source.html  _client_2_h_n_with_parent_8h_source.html  _client_2_h_n_with_shortcut_8h_source.html  _client_2_h_n_with_title_8h_source.html  _compositor_2_h_n_compositor_8h_source.html  _compositor_2_h_n_log_8h_source.html  _h_n_bar_8h_source.html  _heaven-_client_8h_source.html  _heaven-_common_8h_source.html  _heaven-_compositor_8h_source.html  _heaven-_server-_client-_common_8h_source.html  _heaven-_server-_compositor-_common_8h_source.html  _heaven-_server_8h_source.html  _heaven_8h_source.html  annotated.html  (+109 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_b.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js
doxygen/: Doxyfile  Layout.xml
doxygen/md/: main.md
examples/bar/: main.cpp  meson.build
examples/client/: main.cpp  meson.build
examples/compositor/: main.cpp  meson.build
scripts/: env.sh
scripts/docs/: gen_docs.sh
src/: Heaven.pro
src/CZ/Heaven/: CZHeavenVersion.h.in  Heaven.h
src/CZ/Heaven/Bar/: HNAction.h  HNBar.cpp  HNBar.h  HNClient.cpp  HNClient.h  HNCompositor.cpp  HNCompositor.h  HNDivider.h  HNEvent.h  HNLog.cpp  HNLog.h  HNMenu.h  HNObject.cpp  HNObject.h  HNToggle.h  HNTopbar.h  HNWithChildren.h  HNWithEnabled.h  HNWithIcon.h  HNWithParent.h  HNWithShortcut.h  HNWithTitle.h
src/CZ/Heaven/Client/: HNAction.cpp  HNAction.h  HNClient.cpp  HNClient.h  HNDivider.cpp  HNDivider.h  HNLog.cpp  HNLog.h  HNMenu.cpp  HNMenu.h  HNObject.cpp  HNObject.h  HNToggle.cpp  HNToggle.h  HNTopbar.cpp  HNTopbar.h  HNWithChildren.cpp  HNWithChildren.h  HNWithEnabled.cpp  HNWithEnabled.h  HNWithIcon.cpp  HNWithIcon.h  HNWithParent.cpp  HNWithParent.h  HNWithShortcut.cpp  HNWithShortcut.h  HNWithTitle.cpp  HNWithTitle.h
src/CZ/Heaven/Compositor/: HNCompositor.cpp  HNCompositor.h  HNLog.cpp  HNLog.h
src/examples/: Examples.pro
src/examples/client/: Client.pro  main.c  meson.build
src/examples/compositor/: Compositor.pro  main.c  meson.build
src/examples/server/: Server.pro  main.c  meson.build
src/lib/: Common.pri  Heaven-Client.c  Heaven-Client.h  Heaven-Client.pro  Heaven-Common.c  Heaven-Common.h  Heaven-Compositor.c  Heaven-Compositor.h  Heaven-Compositor.pro  Heaven-Server-Client-Common.c  Heaven-Server-Client-Common.h  Heaven-Server-Compositor-Common.c  Heaven-Server-Compositor-Common.h  Heaven-Server.c  Heaven-Server.h  Heaven-Server.pro
src/lib/client/: Heaven-Client.c  Heaven-Client.h  Heaven-Client.pro
src/lib/common/: Heaven-Common.c  Heaven-Common.h
src/lib/server/: Heaven-Server-Private.c  Heaven-Server-Private.h  Heaven-Server.c  Heaven-Server.h  Heaven-Server.pro
